--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-image: url("../Images/BL Background.jpg");
+  background-image: url("../Images/BL\ Background.jpg");
   background-size: cover;
   background-position: fixed;
 }
@@ -11,6 +11,7 @@ body {
 #logo {
   display: block;
   margin: 0 auto;
+  padding-bottom: 10px;
   width: 50%;
 }
 
@@ -22,9 +23,25 @@ h1 {
 
 #currentWord,
 #guessedLetters,
-#gameEnd {
+#gameEnd,
+#totalWins,
+#totalLosses {
   text-align: center;
   font-family: 'Arbutus', cursive;
-  padding-top: 40px;
 }
 
+@media only screen and (max-width: 640px) {
+  body {
+    background-image: url("../Images/dude.png");  
+  }
+
+  h1,
+  #currentWord, 
+  #guessedLetters,
+  #gameEnd,
+  #totalWins,
+  #totalLosses {
+    color: whitesmoke;
+  }
+
+}
